syntax = "proto3";
package proto;
option go_package = ".";

import "google/protobuf/timestamp.proto";

service StratService {
  rpc returnAll(ReturnAllReq) returns (stream ReturnAllRes);
  rpc returnStrat(ReturnStratReq) returns(ReturnStratRes);
  rpc storeStrat(StoreStratReq) returns(StoreStratRes);
}

message Strategy{
  string userid = 1;
  string name = 2;
  string mq = 3;
  string ex = 4;
  google.protobuf.Timestamp created = 5;
}

message StrategyRequest{
  string id = 1;
  string name = 2;
  string ex = 3;
  google.protobuf.Timestamp created = 4;
}

//return all strats
message ReturnAllReq{}

message ReturnAllRes{
  Strategy strategy = 1;
}

//return single strat
message ReturnStratReq{
  string name = 1;
}

message ReturnStratRes{
  Strategy strategy = 1;
}

//create strat
message StoreStratReq{
  Strategy strategy = 1;
}

message StoreStratRes{
  Strategy strategy = 1;
}